@@ -26,6 +26,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix showing non-eligible jobs when asking with -j and not -s.
  -- Fix issue with backfill scheduler scheduling tasks of an array
     when not the head job.
+ -- Fix unnecessary reloading of job submit plugins.
 
 * Changes in Slurm 18.08.7
 ==========================
